# mdns

./: CMakeLists.txt  README.md
cmake/: FindAvahi.cmake  FindUv.cmake  mdnsConfig.cmake.in
debian/: .gitignore  changelog  control  copyright  libmdns-dev.install  rules  shlibs.local
examples/: browse-all.cpp  browse-domains.cpp  browse-services.cpp  browse-uvloop.cpp  publish-conflict.cpp  publish.cpp
include/mdns/: address.hpp  errorcode.hpp  exception.hpp  group.hpp  mdns.hpp  structures.hpp
src/: addressresolver.cpp  addressresolver.hpp  client.cpp  client.hpp  domainbrowser.cpp  domainbrowser.hpp  errorcode.cpp  exception.cpp  group.cpp  groupimpl.cpp  groupimpl.hpp  hostnameresolver.cpp  hostnameresolver.hpp  mdns.cpp  mdnsimpl.cpp  mdnsimpl.hpp  pollasio.cpp  pollasio.hpp  polliface.cpp  polliface.hpp  pollsimple.cpp  pollsimple.hpp  pollthreaded.cpp  pollthreaded.hpp  polluv.cpp  polluv.hpp  recordbrowser.cpp  recordbrowser.hpp  servicebrowser.cpp  servicebrowser.hpp  serviceresolver.cpp  serviceresolver.hpp  servicetypebrowser.cpp  servicetypebrowser.hpp  structures.cpp  structures_priv.hpp
